# runtime-type-checker

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
src/: runtime_check.py
tests/: test_runtime_check.py
